--- a/linear neural networks for regression/1_Linear_Regression.ipynb
+++ b/linear neural networks for regression/1_Linear_Regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V5E1"
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -13,7 +13,7 @@
     "language_info": {
       "name": "python"
     },
-    "accelerator": "TPU"
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -40,15 +40,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aFwVtKdQOGu5",
-        "outputId": "28117561-7660-4f1e-903d-129b0af95a9e"
+        "outputId": "a0160b8d-b545-4689-edcb-cf59cff29757"
       },
-      "execution_count": 13,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: d2l in /usr/local/lib/python3.12/dist-packages (1.0.3)\n"
+            "Collecting d2l\n",
+            "  Downloading d2l-1.0.3-py3-none-any.whl.metadata (556 bytes)\n",
+            "Downloading d2l-1.0.3-py3-none-any.whl (111 kB)\n",
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/111.7 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m111.7/111.7 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: d2l\n",
+            "Successfully installed d2l-1.0.3\n"
           ]
         }
       ]
@@ -66,7 +71,7 @@
       "metadata": {
         "id": "3Y5DqRy8NwBa"
       },
-      "execution_count": 14,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -149,9 +154,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B8Ph-uKebnd1",
-        "outputId": "fd6a133b-81d0-44d6-9082-3ba4b35213ec"
+        "outputId": "85ea121a-ad1f-4194-8ac6-328e75357661"
       },
-      "execution_count": 27,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -219,9 +224,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C8WyMYVwe8VT",
-        "outputId": "d93caf53-34fc-4e04-d472-34cb4358d29d"
+        "outputId": "6238da11-e792-4521-8d39-7e178a5e0ef6"
       },
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,87 +282,225 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "7f7d86d7"
-      },
       "source": [
-        "## 1.2 Training the Model: Stochastic Gradient Descent\n",
+        "## Variants of gradients Descent"
+      ],
+      "metadata": {
+        "id": "N3uIsqR89367"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Stochastic Gradient Descent: Here the SGD  algorithm looks at only one random training example, calculates loss, and updates parameters immediately.\n",
+        "* Cons:\n",
+        "  * 1. It is noisy and has unstable updates - SGD uses one samle at a time. This makes the gradient estimate noisy(updates are incosistent and fluctuate a lot) which results to making convergence unsmooth.\n",
+        "  * 2. Slow convergence at exact minimum- near the optimum,SGD keeps oscillating instead of settling which in turn makes it never converge, and only hover around the minimum.\n",
+        "  * 3. It's highly sensitive to learning rate i.e if the learning rate is too large it divergence away from the optimal minimum, if it's too small it will have an extremely slow learning.\n",
         "\n",
-        "Now that we have our model and loss function, we need a way to find the optimal values for `w` and `b` that minimize the loss. We'll use a simplified version of Stochastic Gradient Descent (SGD) for this demonstration. In practice, we'd use mini-batch SGD as discussed."
-      ]
+        "* 2. Minibatch Stochastic Gradient Descent- here instead of using one example or the whole dataset,it uses small groups of examples (Minibatchs) typically between 32 and 512.\n",
+        "  * Advantages:\n",
+        "     1. It is less noisy than SGD since it uses small batches instead of one sample hence making gradient estimates more stable which in turn makes the loss curve smoother.\n",
+        "     2. It is faster than batch gradient descent since parameters are updated multiple times per epoch.\n",
+        "    3. It ensures efficient use of hardware i.e TPU/GPUs since vectorized operations on minibatchs are highly optimized\n",
+        "* Let's implement a code version of minibatch gradient descent."
+      ],
+      "metadata": {
+        "id": "rTjtrtsN9-q7"
+      }
     },
     {
       "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "x = np.arange(1,9)\n",
+        "y_true = 2*x\n",
+        "\n",
+        "# Initialize parameters as floats for accurate updates\n",
+        "weight = 2.0\n",
+        "bias = 1.0\n",
+        "learning_rate = 0.01\n",
+        "minibatch_size = 4\n",
+        "epochs = 100\n",
+        "\n",
+        "# Prepare data batches\n",
+        "x_batches = np.array_split(x, len(x) // minibatch_size)\n",
+        "y_true_batches = np.array_split(y_true, len(y_true) // minibatch_size)\n",
+        "\n",
+        "print(f\"Initial Weight: {weight:.4f}, Bias: {bias:.4f}\")\n",
+        "\n",
+        "# Training loop\n",
+        "for epoch in range(epochs):\n",
+        "  total_epoch_loss = 0.0\n",
+        "  for x_batch, y_batch in zip(x_batches, y_true_batches):\n",
+        "    # 1. Make prediction with current weights and bias\n",
+        "    y_hat_batch = weight * x_batch + bias\n",
+        "\n",
+        "    # Calculate the error term\n",
+        "    error = y_hat_batch - y_batch\n",
+        "\n",
+        "    # 2. Calculate batch loss (Mean Squared Error)\n",
+        "    batch_loss = np.mean(0.5 * (error**2)) # Using 0.5 * squared error as defined\n",
+        "    total_epoch_loss += batch_loss\n",
+        "\n",
+        "    # 3. Calculate gradients (mean of the derivatives for the batch)\n",
+        "    # As per the loss function L = (1/n) * sum(0.5 * (y_hat - y)^2)\n",
+        "    # dL/dw = (1/n) * sum((y_hat - y) * x)\n",
+        "    # dL/db = (1/n) * sum(y_hat - y)\n",
+        "    grad_w = np.mean(error * x_batch)\n",
+        "    grad_b = np.mean(error)\n",
+        "\n",
+        "    # 4. Update parameters\n",
+        "    weight = weight - learning_rate * grad_w\n",
+        "    bias = bias - learning_rate * grad_b\n",
+        "\n",
+        "  # Print average loss for the epoch to monitor progress\n",
+        "  if (epoch + 1) % 10 == 0 or epoch == 1: # Prints every 10 epochs or first epoch\n",
+        "      avg_epoch_loss = total_epoch_loss / len(x_batches)\n",
+        "      print(f\"Epoch {epoch + 1}: Loss = {avg_epoch_loss:.4f}, Weight = {weight:.4f}, Bias = {bias:.4f}\")\n",
+        "\n",
+        "print(f\"\\nFinal Weight: {weight:.4f}, Bias: {bias:.4f}\")\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "84908317",
-        "outputId": "98d7c331-6325-469c-dca7-f0f47279d474"
+        "id": "q1HIWktWCQvW",
+        "outputId": "60d6b560-8b34-46da-a991-c561c100d7d0"
       },
-      "source": [
-        "# Initialize parameters\n",
-        "w = np.array([0.0]) # Start with some initial weight\n",
-        "b = 0.0              # Start with some initial bias\n",
-        "\n",
-        "# Learning rate (controls the step size in each update)\n",
-        "learning_rate = 0.01\n",
-        "\n",
-        "# Number of epochs (how many times to iterate over the dataset)\n",
-        "num_epochs = 100\n",
-        "\n",
-        "# Store loss values to visualize training progress\n",
-        "losses = []\n",
-        "\n",
-        "print(f\"Initial w: {w[0]:.4f}, Initial b: {b:.4f}\")\n",
-        "\n",
-        "for epoch in range(num_epochs):\n",
-        "    # Calculate predictions\n",
-        "    y_hat_epoch = w[0] * x + b\n",
-        "\n",
-        "    # Calculate the gradient of the loss with respect to w and b\n",
-        "    # Loss: L(w, b) = 0.5 * (1/n) * sum((y_hat - y_true)^2)\n",
-        "    # dL/dw = (1/n) * sum((y_hat - y_true) * x)\n",
-        "    # dL/db = (1/n) * sum(y_hat - y_true)\n",
-        "\n",
-        "    grad_w = np.mean((y_hat_epoch - y_true) * x)\n",
-        "    grad_b = np.mean(y_hat_epoch - y_true)\n",
-        "\n",
-        "    # Update parameters using gradient descent\n",
-        "    w[0] = w[0] - learning_rate * grad_w\n",
-        "    b = b - learning_rate * grad_b\n",
-        "\n",
-        "    # Calculate and store the loss for this epoch\n",
-        "    current_loss = 0.5 * np.mean((y_hat_epoch - y_true)**2)\n",
-        "    losses.append(current_loss)\n",
-        "\n",
-        "    if (epoch + 1) % 10 == 0:\n",
-        "        print(f\"Epoch {epoch + 1:3d}, Loss: {current_loss:.4f}, w: {w[0]:.4f}, b: {b:.4f}\")\n",
-        "\n",
-        "print(f\"\\nFinal w: {w[0]:.4f}, Final b: {b:.4f}\")"
-      ],
-      "execution_count": 31,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Initial w: 0.0000, Initial b: 0.0000\n",
-            "Epoch  10, Loss: 18.3042, w: 2.4806, b: 0.6514\n",
-            "Epoch  20, Loss: 17.3080, w: 2.4490, b: 0.9640\n",
-            "Epoch  30, Loss: 16.3711, w: 2.4093, b: 1.2668\n",
-            "Epoch  40, Loss: 15.4850, w: 2.3706, b: 1.5613\n",
-            "Epoch  50, Loss: 14.6468, w: 2.3330, b: 1.8478\n",
-            "Epoch  60, Loss: 13.8540, w: 2.2964, b: 2.1263\n",
-            "Epoch  70, Loss: 13.1042, w: 2.2608, b: 2.3973\n",
-            "Epoch  80, Loss: 12.3949, w: 2.2262, b: 2.6608\n",
-            "Epoch  90, Loss: 11.7240, w: 2.1926, b: 2.9171\n",
-            "Epoch 100, Loss: 11.0894, w: 2.1599, b: 3.1663\n",
+            "Initial Weight: 2.0000, Bias: 1.0000\n",
+            "Epoch 2: Loss = 0.1885, Weight = 1.8818, Bias = 0.9704\n",
+            "Epoch 10: Loss = 0.0972, Weight = 1.8452, Bias = 0.9314\n",
+            "Epoch 20: Loss = 0.0894, Weight = 1.8513, Bias = 0.8934\n",
+            "Epoch 30: Loss = 0.0822, Weight = 1.8574, Bias = 0.8570\n",
+            "Epoch 40: Loss = 0.0757, Weight = 1.8632, Bias = 0.8221\n",
+            "Epoch 50: Loss = 0.0696, Weight = 1.8688, Bias = 0.7886\n",
+            "Epoch 60: Loss = 0.0641, Weight = 1.8741, Bias = 0.7564\n",
+            "Epoch 70: Loss = 0.0590, Weight = 1.8793, Bias = 0.7256\n",
+            "Epoch 80: Loss = 0.0543, Weight = 1.8842, Bias = 0.6961\n",
+            "Epoch 90: Loss = 0.0499, Weight = 1.8889, Bias = 0.6677\n",
+            "Epoch 100: Loss = 0.0459, Weight = 1.8934, Bias = 0.6405\n",
             "\n",
-            "Final w: 2.1599, Final b: 3.1663\n"
+            "Final Weight: 1.8934, Bias: 0.6405\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1.2 Vectorization for Speed"
+      ],
+      "metadata": {
+        "id": "KjWz9Df0LNpi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* When training our models, we typically want to process whole minibathces of examples simultaneously.\n",
+        "* Doing this requires that we vectorixe the calculations and leverage fast linear algebra libraries rather than writing costly-loops in Python."
+      ],
+      "metadata": {
+        "id": "6SQBLwXTL-Ft"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##example\n",
+        "n = 10000 #n-dimensional vector\n",
+        "a = torch.ones(n)\n",
+        "b = torch.ones(n)\n"
+      ],
+      "metadata": {
+        "id": "AuYXAuXBMUwj"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##testing how a for-loop will take\n",
+        "c = torch.zeros(n)\n",
+        "t = time.time()\n",
+        "for i in range(n):\n",
+        "  c[i] = a[i] + b[i]\n",
+        "f'{time.time()-t:.5f} sec'"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "Dp289KA0MgoO",
+        "outputId": "10cf5539-2aa7-4571-afce-ef916f2a799a"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0.17138 sec'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "##using operator + for elementwise sum\n",
+        "t = time.time()\n",
+        "d = a+b\n",
+        "f\"{time.time() -t:.5f} sec\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "1V4fT7aTM0rI",
+        "outputId": "1baee80c-f36f-4cd7-e230-50cf6985806e"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'0.00050 sec'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* From above we can conclude that using the operator `+` is faster than the for-loop."
+      ],
+      "metadata": {
+        "id": "neNapfyfNEUJ"
+      }
     }
   ]
 }
