--- a/linear neural networks for regression/3_Synthetic_Regression_Data.ipynb
+++ b/linear neural networks for regression/3_Synthetic_Regression_Data.ipynb
@@ -18,7 +18,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -55,7 +55,7 @@
       "metadata": {
         "id": "10f0ysqR8DJz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
       "metadata": {
         "id": "a6zH6jul9ItO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "Z8cftqD4-IzG"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +143,7 @@
         "id": "6joSkj6q-llI",
         "outputId": "f24bcbba-fcd3-4f36-ae66-bf6e53213da1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +194,7 @@
       "metadata": {
         "id": "p2rcs_dA_jIb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +211,7 @@
         "id": "Go0FL3MNAZjw",
         "outputId": "5f15c076-a99e-4f67-d78b-296bd58ab968"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +270,7 @@
       "metadata": {
         "id": "Dr5EnG8rB_N7"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -295,7 +295,7 @@
         "id": "deiAGw3bDYOA",
         "outputId": "a05ac03c-8617-4a9c-a349-ba1c28c32b97"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
         "id": "atzOpwwrDwpc",
         "outputId": "598f8a00-42fb-4f56-d85d-686f4a72a207"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +387,7 @@
         "id": "nnI7NAvVF6ia",
         "outputId": "25254d2c-b454-4ea8-a52d-6bb2dcedf9e7"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,6 +419,20 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* We can see from above that given a dataset of examples we reshuffle it but why do we need to reshuffle the data points in the dataset?\n",
+        "1. Preventing `shortcut learning`- if data is ordered the model finds the \"cheat code\". For example if we have a dataset with cat and dogs images. And say we divide the dataset into two batches one containing dog and cat images. As the model sees the cat images it may see that since cat are indoors with stuff like carpets so that means that's an image of a cat.\n",
+        "If data is shuffled this cheat code it broken. The only way the model can reduce loss consistently is bylearning the actual features shape,color that define the object.\n",
+        "2. Smooting the gradient path:\n",
+        "in unordered data,each training step is based on a random sample, so we can generally move towards the bottom.\n",
+        "In ordered we will take like 100 steps to the left 100 steps to the right and never end at the bottom.\n"
+      ],
+      "metadata": {
+        "id": "6aaNLbzZWrc-"
+      }
     }
   ]
 }
