--- a/03 - Linear Neural Networks  for classification/1_Softmax_Regression.ipynb
+++ b/03 - Linear Neural Networks  for classification/1_Softmax_Regression.ipynb
@@ -100,7 +100,7 @@
         "id": "2OYgx-BOPrra",
         "outputId": "7af988a9-ddb3-4f98-8354-3615d9c673be"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,6 +149,116 @@
       ],
       "metadata": {
         "id": "uMDRTzlATTmU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 1.4 Vectorization"
+      ],
+      "metadata": {
+        "id": "pgRqvFN3bE9c"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* To improve computational efficiency, we vectorize calculations in minibatches of data.\n",
+        "* Assuming that we are given a minibatch $X \\in R^{nxd}$ of $n$ examples with dimensionality (number of inputs) d.\n",
+        "* We also assume that we have $q$ categories in the output.\n",
+        "* Then the weights satisfy $W \\in R^{d x q}$ and the bias satisfies $b \\in R^{l x q}$.\n",
+        "\n",
+        "   $O = XW + b$\n",
+        "   $Y^ = softmax(O)$\n",
+        "\n",
+        "* This accelarates the dominant operation into matrix-matrix product $XW$.\n",
+        "* Since each row in $X$ represents a data example, the softmax operation itself can be computed rowwise, for each row $O$, exponentiate all entries and the normalize them by the sum."
+      ],
+      "metadata": {
+        "id": "ziwTOwtubIb5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.1 Loss Function"
+      ],
+      "metadata": {
+        "id": "H71wGaT8csKB"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* Since we have the mapping from features $x$ to probabilities $y^$, we need a way to optimize the accuracy of this mapping.\n",
+        "* We will rely on maximum likelihood estimation."
+      ],
+      "metadata": {
+        "id": "Kdwu2LUTczV8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.2 Log-Likelihood"
+      ],
+      "metadata": {
+        "id": "RVaHULxpeljP"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* The softmax function produces a prediction vector $\\hat{y}$ which represets estimated conditional probabilities given an input $x$.\n",
+        "* True labels are assumed to be one-hot encoded, and data points are treated as independent.\n",
+        "* The probability of the full dataset's labels given the inputs is the product of the individial probabilities:\n",
+        "$\n",
+        "P(Y \\mid X) = \\prod_{i=1}^{n} P(y^{(i)} \\mid x^{(i)})\n",
+        "$\n",
+        "\n",
+        "* Maximizing this product is equivalent to minimizing the **negative log-likelihood**, which decomposes into a sum over examples:\n",
+        "  $\n",
+        "  -\\log P(Y \\mid X) = \\sum_{i=1}^{n} -\\log P(y^{(i)} \\mid x^{(i)}) = \\sum_{i=1}^{n} l(y^{(i)}, \\hat{y}^{(i)})\n",
+        "  $\n",
+        "\n",
+        "* For a single example with $q$ classes, the loss is:\n",
+        " $\n",
+        " l(y, \\hat{y}) = -\\sum_{j=1}^{q} y_j \\log \\hat{y}_j\n",
+        " $\n",
+        "* This loss is called *cross-entropy loss*.\n",
+        "* Because the true label vector $y$ is one-hot encoded,only the log-probability of the correct class contributes to the loss.\n",
+        "\n",
+        "* This loss is always non-negative and equal zero only when the model predicts the correct class with probability 1.\n",
+        "\n",
+        "* In practice, this cannot occur with finite model weights, since softmax outputs reach 1 only in the limit. Moreover, assigning zero probability to the true class leads to infinite loss, meaning overly confident wrong predictions are penalized infinitely.\n"
+      ],
+      "metadata": {
+        "id": "gJDgEX2yep_Z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2.3 Softmax and Cross-Entropy Loss\n"
+      ],
+      "metadata": {
+        "id": "duMBMoVQjNe7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* The softmax function converts the logits $o=(o_1,o_2,....o_q)$ into a probability distribution $\\hat{y}$ over classes.\n",
+        "* When this softmax ouput is plugged into the cross-entropy loss, the loss for a single example can be rewritten as:\n",
+        "   \\begin{aligned}\n",
+        "l(y, \\hat{y}) &= -\\sum_{j=1}^{q} y_j \\log \\left( \\frac{\\exp(o_j)}{\\sum_{k=1}^q \\exp(o_k)} \\right) \\\\\n",
+        "&= -\\sum_{j=1}^q y_j \\left( o_j - \\log \\sum_{k=1}^q \\exp(o_k) \\right) \\\\\n",
+        "&= \\log \\sum_{k=1}^q \\exp(o_k) - \\sum_{j=1}^q y_j o_j\n",
+        "\\end{aligned}\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "QPKX0qEEjTZB"
       }
     }
   ]
