--- a/03 - Linear Neural Networks  for classification/1_Softmax_Regression.ipynb
+++ b/03 - Linear Neural Networks  for classification/1_Softmax_Regression.ipynb
@@ -255,6 +255,20 @@
         "&= -\\sum_{j=1}^q y_j \\left( o_j - \\log \\sum_{k=1}^q \\exp(o_k) \\right) \\\\\n",
         "&= \\log \\sum_{k=1}^q \\exp(o_k) - \\sum_{j=1}^q y_j o_j\n",
         "\\end{aligned}\n",
+        "\n",
+        "* This form shows that the loss consists of two parts:\n",
+        "  1. A normalization term involving all logits via log-sum exponentiation.\n",
+        "  2. A term that rewards high logits for the true class.\n",
+        "\n",
+        "* Taking the derivative of the loss with respect to a logit $o_j$ yields a very simple and important result:\n",
+        "   $\\frac{\\partial L}{\\partial o_j} = \\text{softmax}(o)_j - y_j$\n",
+        "  \n",
+        "* Thus the gradient is just the difference between:\n",
+        "  1. What the model predicts (softmax probability).\n",
+        "  2. What actually happened (the label).\n",
+        "\n",
+        "* Cross-entropy measures how many bits are required to encode the true outcomes $y$ using the predicted distribution $\\hat{y}$.\n",
+        "* Minimizing cross-entropy therefore means making the predicted distribution as close as possible to the true one.\n",
         "\n"
       ],
       "metadata": {
